# ng-slice-download

./: .gitignore  .pre-commit-config.yaml  README.md  cuboid.py  main.py  plane.py  plot.py  pyproject.toml  test.py  test_plane.py
.github/workflows/: publish.yml
src/ng_slice_download/: cli.py  main.py  utils.py
tests/: test_plane.py  test_utils.py
