[project]
name = "plane-interpol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hoa-tools@git+https://github.com/HumanOrganAtlas/hoa-tools.git@1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "ruff>=0.14.13",
    "scipy>=1.17.0",
    "tensorstore>=0.1.80",
    "tifffile>=2026.1.14",
    "tqdm>=4.67.1",
    "zarr>=3.1.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyinstrument>=5.1.2",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "scipy-stubs>=1.17.0.1",
]
